# hoolamike

./: .env  .envrc  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  create-release.sh  flake.nix  justfile  rustfmt.toml
.github/workflows/: rust.yml
crates/bsa-cli/: Cargo.toml
crates/bsa-cli/src/: main.rs
crates/hoola-audio/: Cargo.toml
crates/hoola-audio/src/: chunk_while.rs  lib.rs  main.rs  resampler.rs
crates/hoola-audio/src/resampler/: multichannel_chunk_reader.rs  ringbuf_types.rs
crates/hoolamike/: Cargo.toml
crates/hoolamike/src/: archive_cli.rs  audio_cli.rs  compression.rs  config_file.rs  downloaders.rs  extensions.rs  helpers.rs  install_modlist.rs  main.rs  modlist_json.rs  nxm_handler.rs  octadiff_reader.rs  post_install_fixup.rs  progress_bars.rs  progress_bars_v2.rs  read_wrappers.rs  utils.rs  wabbajack_file.rs
crates/hoolamike/src/compression/: bethesda_archive.rs  compress_tools.rs  detect_lzma_method_14.rs  forward_only_seek.rs  preheated_archive.rs  sevenz.rs  unrar_rs.rs  wrapped_7zip.rs  zip.rs
crates/hoolamike/src/compression/bethesda_archive/: integration_tests.rs
crates/hoolamike/src/downloaders/: google_drive.rs  helpers.rs  mediafire.rs  mega.rs  nexus.rs  wabbajack_cdn.rs
crates/hoolamike/src/downloaders/wabbajack_cdn/test_raw_responses/: bad-response-1.bytes
crates/hoolamike/src/extensions/: fallout_new_vegas_4gb_patch.rs  tale_of_two_wastelands_installer.rs
crates/hoolamike/src/extensions/tale_of_two_wastelands_installer/: build_bsa.rs  file_attrs.rs  handle_asset.rs  manifest_file.rs  post_commands.rs
crates/hoolamike/src/extensions/tale_of_two_wastelands_installer/manifest_file/: asset.rs  check.rs  kind_guard.rs  location.rs  variable.rs
crates/hoolamike/src/extensions/tale_of_two_wastelands_installer/manifest_file/asset/: serde_compat.rs
crates/hoolamike/src/install_modlist/: directives.rs  download_cache.rs  downloads.rs
crates/hoolamike/src/install_modlist/directives/: create_bsa.rs  from_archive.rs  inline_file.rs  nested_archive_directives.rs  nested_archive_manager.rs  nested_archive_manager_v2.rs  patched_from_archive.rs  preheat_archive_hash_paths.rs  queued_archive_task.rs  remapped_inline_file.rs  transformed_texture.rs  wabbajack_file_handle.rs
crates/hoolamike/src/install_modlist/directives/create_bsa/: fallout_4.rs  tes_4.rs
crates/hoolamike/src/install_modlist/directives/queued_archive_task/: cached_future.rs
crates/hoolamike/src/install_modlist/directives/transformed_texture/: dds_recompression.rs  dds_recompression_directx_tex.rs  dds_recompression_intel_tex.rs  dds_recompression_v2.rs
crates/hoolamike/src/install_modlist/directives/transformed_texture/dds_recompression_v2/: dxgi_format_mapping.rs
crates/hoolamike/src/modlist_json/: directive.rs  image_format.rs  type_guard.rs
crates/hoolamike/src/modlist_json/directive/: archive_hash_path.rs  create_bsa_directive.rs
crates/hoolamike/src/modlist_json/directive/create_bsa_directive/: ba2.rs  bsa-example-1.json  bsa.rs
crates/hoolamike/src/nxm_handler/: cli.rs  register.rs  utils.rs
crates/hoolamike/src/post_install_fixup/: diffing.rs
crates/hoolamike/src/progress_bars_v2/: hooks.rs
crates/hoolamike/src/progress_bars_v2/hooks/: async_write.rs  read.rs  write.rs
crates/tokio-cached-future/: Cargo.toml
crates/tokio-cached-future/src/: lib.rs
crates/wrapped-7zip/: Cargo.toml
crates/wrapped-7zip/src/: lib.rs  list_output.rs  tests.rs
crates/wrapped-7zip/src/list_output/: tests.rs
crates/wrapped-7zip/test-data/: example-1.rar  example-small-file.7z
src/: compression.rs  config_file.rs  downloaders.rs  error.rs  install_modlist.rs  main.rs  modlist_data.rs  modlist_json.rs  octadiff_reader.rs  progress_bars.rs
src/compression/: compress_tools.rs  zip.rs
src/downloaders/: gamefile_source_downloader.rs  google_drive.rs  helpers.rs  nexus.rs  wabbajack_cdn.rs
src/downloaders/wabbajack_cdn/: test_responses.rs
src/install_modlist/: directives.rs  download_cache.rs  downloads.rs
src/install_modlist/directives/: inline_file.rs  patched_from_archive.rs
src/modlist_json/: directive.rs  type_guard.rs
src/octadiff_reader/: example-1.octadiff-delta  tests.rs
