[package]
name = "hoolamike"
version = "0.1.3"
edition = "2021"
repository = "https://github.com/Niedzwiedzw/hoolamike"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
base64 = "0.22.1"
bon = "3.1.1"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.21", features = ["derive", "cargo", "env", "string"] }
console = { version = "0.15.8", features = ["windows-console-colors"] }
console-subscriber = "0.4.1"
derivative = "2.2.0"
derive_more = { version = "1.0.0", features = ["full"] }
enum-kinds = "0.5.1"
enum_dispatch = "0.3.13"
extension-traits = "2.0.0"
flate2 = "1.0.35"
fs2 = "0.4.3"
futures = "0.3.31"
futures-util = "0.3.31"
indexmap = { version = "2.7.0", features = ["serde"] }
indicatif = { version = "0.17.9", features = ["tokio", "improved_unicode"] }
itertools = "0.13.0"
nonempty = { version = "0.10.0", features = ["serde", "serialize"] }
num_cpus = "1.16.0"
once_cell = "1.20.2"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["stream"] }
scraper = "0.21.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_urlencoded = "0.7.1"
serde_yaml = "0.9.34"
tabled = "0.17.0"
tap = "1.0.1"
tempfile = "3.14.0"
test-log = { version = "0.2.16", default-features = false, features = [
  "trace",
] }
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
transpare = { git = "https://github.com/Niedzwiedzw/transpare", version = "0.2.0" }
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
xxhash-rust = { version = "0.8.12", features = ["xxh64", "std"] }
zip = "2.2.1"
