[workspace]
resolver = "2"
default-members = ["crates/hoolamike"]
members = ["crates/hoolamike", "crates/wrapped-7zip"]

[workspace.package]
version = "0.1.4"
license = "MIT"
repository = "https://github.com/Niedzwiedzw/hoolamike"
categories = ["modding"]
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
# internal
wrapped-7zip.path = "crates/wrapped-7zip"

# external
anyhow = "1.0.93"
base64 = "0.22.1"
binrw = "0.14.1"
bon = "3.1.1"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.21", features = ["derive", "cargo", "env", "string"] }
compress-tools = "0.15.1"
console = { version = "0.15.8", features = ["windows-console-colors"] }
console-subscriber = "0.4.1"
derivative = "2.2.0"
derive_more = { version = "1.0.0", features = ["full"] }
enum-kinds = "0.5.1"
enum_dispatch = "0.3.13"
extension-traits = "2.0.0"
flate2 = "1.0.35"
fs2 = "0.4.3"
futures = "0.3.31"
futures-util = "0.3.31"
hex = "0.4.3"
indexmap = { version = "2.7.0", features = ["serde"] }
indicatif = { version = "0.17.9", features = ["tokio", "improved_unicode"] }
iter-read = "1.1.0"
itertools = "0.13.0"
nonempty = { version = "0.10.0", features = ["serde", "serialize"] }
num = "0.4.3"
num_cpus = "1.16.0"
omnom = "3.0.0"
once_cell = "1.20.2"
parking_lot = { version = "0.12.3", features = ["arc_lock", "nightly"] }
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["stream"] }
scraper = "0.21.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_urlencoded = "0.7.1"
serde_yaml = "0.9.34"
sevenz-rust = "0.6.1"
tabled = "0.17.0"
tap = "1.0.1"
tempfile = "3.14.0"
test-log = { version = "0.2.16", default-features = false, features = [
  "trace",
] }
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
transpare = { git = "https://github.com/Niedzwiedzw/transpare", version = "0.2.0" }
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
xxhash-rust = { version = "0.8.12", features = ["xxh64", "std"] }
zip = { version = "2.2.1", features = ["lzma-rs", "flate2"] }
