[workspace]
resolver = "2"
members = [
  "crates/bsa-cli",
  "crates/hoola-audio",
  "crates/hoolamike",
  "crates/tokio-cached-future",
  "crates/wrapped-7zip",
]
default-members = ["crates/hoolamike"]

[workspace.package]
version = "0.15.1"
license = "MIT"
repository = "https://github.com/Niedzwiedzw/hoolamike"
categories = ["modding"]
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
# internal
wrapped-7zip.path = "crates/wrapped-7zip"
tokio-cached-future.path = "crates/tokio-cached-future"
hoola-audio.path = "crates/hoola-audio"

# external
anyhow = "1.0.96"
base64 = "0.22.1"
binrw = "0.14.1"
bon = "3.3.2"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.30", features = ["derive", "cargo", "env", "string"] }
# compress-tools = "0.15.1"
compress-tools.git = "https://github.com/Niedzwiedzw/compress-tools-rs"
console = { version = "0.15.10", features = ["windows-console-colors"] }
console-subscriber = "0.4.1"
derivative = "2.2.0"
derive_more = { version = "1.0.0", features = ["full"] }
enum-kinds = "0.5.1"
enum_dispatch = "0.3.13"
extension-traits = "2.0.0"
flate2 = "1.0.35"
fs2 = "0.4.3"
futures = "0.3.31"
futures-util = "0.3.31"
hex = "0.4.3"
indexmap = { version = "2.7.1", features = ["serde"] }
indicatif = { version = "0.17.11", features = ["tokio", "improved_unicode"] }
iter-read = "1.1.0"
itertools = "0.13.0"
nonempty = { version = "0.10.0", features = ["serde", "serialize"] }
num = "0.4.3"
num_cpus = "1.16.0"
omnom = "3.0.0"
once_cell = "1.20.3"
parking_lot = { version = "0.12.3", features = ["arc_lock", "nightly"] }
regex = "1.11.1"
reqwest = { version = "0.12.12", default-features = false, features = [
  "stream",
  "rustls-tls",
  "charset",
  "http2",
  "macos-system-configuration",
  "json",
] }
scraper = "0.21.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
serde_urlencoded = "0.7.1"
serde_yaml = "0.9.34"
sevenz-rust = "0.6.1"
tabled = "0.17.0"
tap = "1.0.1"
tempfile = "3.17.1"
test-log = { version = "0.2.17", default-features = false, features = [
  "trace",
] }
tokio = { version = "1.43.0", features = ["full", "tracing"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
transpare = { git = "https://github.com/Niedzwiedzw/transpare", version = "0.2.0" }
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.14.0", features = ["serde", "v4"] }
xxhash-rust = { version = "0.8.15", features = ["xxh64", "std"] }
zip = { version = "2.2.2", features = ["lzma-rs", "flate2"] }
assert-json-diff = "2.0.2"
async-recursion = "1.1.1"
combine = "4.6.7"
crossbeam = "0.8.4"
dashmap = "6.1.0"
directxtex = "1.3.0"
filetime = "0.2.25"
futures-executor = "0.3.31"
heapless = "0.8.0"
hex-literal = "0.4.1"
hound = "3.5.1"
inquire = { version = "0.7.5", default-features = false }
lru = "0.12.5"
memmap2 = "0.9.5"
mp3lame-encoder = "0.2.1"
normalize-path = "0.2.1"
ogg = "0.9.2"
os_pipe = "1.2.1"
pretty_assertions = "1.4.1"
rand = "0.8.5"
rayon = "1.10.0"
ringbuf = "0.4.7"
ringbuffer = "0.15.0"
rubato = "0.16.1"
serde_repr = "0.1.19"
serde_with = "3.12.0"
sha1 = "0.10.6"
similar = "2.7.0"
snailquote = "0.3.1"
static_assertions = "1.1.0"
symphonia = "0.5.4"
thiserror = "2.0.11"
tracing-flame = "0.2.0"
tracing-indicatif = "0.3.9"
typed-path = "0.10.0"
unrar = "0.5.8"
vorbis_rs = "0.5.5"
walkdir = "2.5.0"
which = "7.0.2"
xdelta = { git = "https://github.com/SonnyX/xdelta-decoder-rust", rev = "4ee8d64a77659267d3e39cd05f61a6ee369492fc" }
yash-syntax = "0.13.0"
ba2 = "3.0.1"


[profile.release]
codegen-units = 1
lto = "fat"
