[package]
name = "bsa-cli"
version.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.93"
ba2 = { git = "https://github.com/Ryan-rsm-McKenzie/bsa-rs", branch = "main" }
clap = { version = "4.5.21", features = ["derive", "cargo", "env", "string"] }
derive_more = { version = "1.0.0", features = ["full"] }
tap = "1.0.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
