[package]
name = "bsa-cli"
version.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
ba2 = { workspace = true }
clap = { workspace = true, features = ["derive", "cargo", "env", "string"] }
derive_more = { workspace = true, features = ["full"] }
tap = { workspace = true }
