[package]
name = "hoola-audio"
version.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
derivative.workspace = true
extension-traits.workspace = true
heapless = "0.8.0"
hound = "3.5.1"
itertools.workspace = true
mp3lame-encoder = "0.2.1"
nonempty.workspace = true
num.workspace = true
ogg = "0.9.2"
ringbuf = "0.4.7"
rubato = "0.16.1"
symphonia = { version = "0.5.4", features = ["all-codecs", "opt-simd"] }
tap.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
vorbis_rs = "0.5.5"
