[package]
name = "hoola-audio"
version.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
derivative.workspace = true
extension-traits.workspace = true
heapless = { workspace = true }
hound = { workspace = true }
itertools.workspace = true
mp3lame-encoder = { workspace = true }
nonempty.workspace = true
num.workspace = true
ogg = { workspace = true }
ringbuf = { workspace = true }
rubato = { workspace = true }
sha1 = { workspace = true }
symphonia = { workspace = true, features = ["all-codecs", "opt-simd"] }
tap.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
vorbis_rs = { workspace = true }
