[package]
name = "hoolamike"
version.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
# internal 
wrapped-7zip.workspace = true
hoola-audio.workspace = true

# external
anyhow.workspace = true
ba2 = { workspace = true }
base64.workspace = true
binrw.workspace = true
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive", "cargo", "env"] }
compress-tools.workspace = true
console.workspace = true
console-subscriber.workspace = true
derivative.workspace = true
derive_more.workspace = true
directxtex = { workspace = true }
enum-kinds.workspace = true
enum_dispatch.workspace = true
extension-traits.workspace = true
flate2.workspace = true
futures.workspace = true
hex.workspace = true
indexmap.workspace = true
indicatif = { workspace = true, features = ["futures", "rayon"] }
itertools.workspace = true
memmap2 = { workspace = true }
nonempty.workspace = true
normalize-path = { workspace = true }
num.workspace = true
num_cpus.workspace = true
omnom.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
rand = { workspace = true }
rayon = { workspace = true }
regex.workspace = true
reqwest.workspace = true
scraper.workspace = true
serde.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
serde_repr = { workspace = true }
serde_with = { workspace = true }
serde_yaml.workspace = true
similar = { workspace = true, features = ["inline"] }
static_assertions = { workspace = true, features = ["nightly"] }
tabled.workspace = true
tap.workspace = true
tempfile.workspace = true
test-log.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-flame = { workspace = true }
tracing-indicatif = { workspace = true }
tracing-subscriber.workspace = true
transpare.workspace = true
typed-path = { workspace = true }
unrar = { workspace = true }
url.workspace = true
uuid.workspace = true
walkdir = { workspace = true }
xxhash-rust.workspace = true
zip.workspace = true
xdelta = { workspace = true }
yash-syntax = { workspace = true }
futures-executor = { workspace = true }
snailquote = { workspace = true }
filetime = { workspace = true }
sha1 = { workspace = true }
hex-literal = { workspace = true }
directories = "6.0.0"
axum = { version = "0.8.1", features = ["macros"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
serde_urlencoded.workspace = true
notify = "8.0.0"
intel_tex = "0.1.4"
ddsfile = "0.5.2"
image = "0.25.6"
sevenz-rust2 = { version = "0.13.2", features = ["aes256", "brotli", "bzip2", "deflate", "lz4", "ppmd", "zstd"] }
# tikv-jemallocator = "0.6.0"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55.0"
vcpkg = "0.2"

[dev-dependencies]
assert-json-diff = { workspace = true }
