[package]
name = "tokio-cached-future"
version.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
dashmap = { version = "6.1.0", features = ["inline"] }
futures.workspace = true
tap.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
anyhow.workspace = true
test-log.workspace = true
