[package]
name = "wrapped-7zip"
version.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
readme.workspace = true
edition.workspace = true

[features]
default = ["rayon"]
rayon = []
tokio = []

[dependencies]
anyhow.workspace = true
chrono = { workspace = true, features = ["serde"] }
extension-traits.workspace = true
futures.workspace = true
futures-util.workspace = true
parking_lot.workspace = true
rayon = "1.10.0"
serde_json.workspace = true
tap.workspace = true
tempfile.workspace = true
test-log.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
which = "7.0.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
